# libtellurium

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: logger.h
include/logger/: console.h  file.h
src/: core.c
src/logger/: console.c  console.h  file.c  file.h  syslog.c  syslog.h
test/: basic.c
